# finetuning-nlp-classification

./: README.md
hierarchical-qlora-complaint-triage/: .gitignore  README.md  ZERO_TO_HERO_STUDY_HANDBOOK.html  ZERO_TO_HERO_STUDY_HANDBOOK.md  active_learning.py  calibration.py  download_cfpb.py  hierarchical_qlora_complaint_triage.ipynb  inference.py  make_notebook.py  pyproject.toml  triage_baselines.py  triage_config.py  triage_data.py  triage_model.py  triage_worker.py
lora-dispute-ticket-routing/: .gitignore  README.md  ZERO_TO_HERO_STUDY_HANDBOOK.md  _granite_smoke.py  _phi_smoke.py  inference.py  lora_dispute_ticket_routing.2way-qwen-granite.ipynb.bak  lora_dispute_ticket_routing.ipynb  make_notebook.py  pyproject.toml  routing_pipeline.py  routing_taxonomy.py
lora-dpo-json-extraction/: .gitignore  README.md  ZERO_TO_HERO_STUDY_HANDBOOK.md  pyproject.toml
lora-dpo-json-extraction/configs/: default.yaml  internet_banking77.yaml
lora-dpo-json-extraction/src/lora_dpo_json_extraction/: __init__.py  data.py  datasets.py  evaluate.py  models.py  run_pipeline.py  schemas.py  settings.py  train.py  utils.py
lora-dpo-json-extraction/src/lora_dpo_json_extraction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lora-dpo-json-extraction/tests/: test_data_generation.py  test_json_parser.py
lora-qlora-finetuning-lab/: .env.example  .gitignore  README.md  ZERO_TO_HERO_STUDY_HANDBOOK.html  ZERO_TO_HERO_STUDY_HANDBOOK.md  pyproject.toml
lora-qlora-finetuning-lab/app/: streamlit_app.py
lora-qlora-finetuning-lab/artifacts/charts/: accuracy_by_run.html  macro_f1_by_run.html
lora-qlora-finetuning-lab/artifacts/metrics/: evaluation_metrics.csv  qlora_train_metrics.json  summary.json
lora-qlora-finetuning-lab/artifacts/reports/: lora_qlora_report.md
lora-qlora-finetuning-lab/artifacts/tables/: eval_records_baseline.json  eval_records_tuned.json  predictions.csv
lora-qlora-finetuning-lab/data/raw/: emotion_test.json  emotion_train.json  emotion_validation.json
lora-qlora-finetuning-lab/models/lora_distilgpt2/: train_metrics.json
lora-qlora-finetuning-lab/models/lora_distilgpt2/adapter/: README.md  adapter_config.json  adapter_model.safetensors
lora-qlora-finetuning-lab/models/qlora_opt350m/adapter/: README.md  adapter_config.json
lora-qlora-finetuning-lab/notebooks/: 01_data_and_baselines.ipynb  02_lora_finetuning_tutorial.ipynb  03_qlora_finetuning_tutorial.ipynb  04_comparison_and_report.ipynb
lora-qlora-finetuning-lab/scripts/: execute_notebooks.py  run_pipeline.py
lora-qlora-finetuning-lab/src/lora_qlora_lab/: __init__.py  cli.py  config.py  logging_utils.py  pipeline.py
lora-qlora-finetuning-lab/src/lora_qlora_lab/data/: emotion_dataset.py
lora-qlora-finetuning-lab/src/lora_qlora_lab/eval/: inference.py
lora-qlora-finetuning-lab/src/lora_qlora_lab/reporting/: reporting.py
lora-qlora-finetuning-lab/src/lora_qlora_lab/training/: fine_tune.py
lora-qlora-finetuning-lab/tests/: test_prompts.py  test_reporting.py  test_sampling.py
nlp-unstructured-insights/: .gitignore  README.md  ZERO_TO_HERO_STUDY_HANDBOOK.md  main.py  nlp_unstructured_insights.executed.ipynb  nlp_unstructured_insights.ipynb  pyproject.toml
nlp-unstructured-insights/src/: __init__.py  insights_pipeline.py  text_prep.py
pytorch-distilbert-complaint-classifier/: README.md  ZERO_TO_HERO_STUDY_HANDBOOK.md  generate_notebook.py  inference.py  pyproject.toml  pytorch_distilbert_complaint_classifier.ipynb
qlora-complaint-intent-classifier/: INTERVIEW_CRAM_GUIDE.md  MASTER_LEARNING_HANDBOOK.md  README.md  ZERO_TO_HERO_STUDY_HANDBOOK.md  inference.py  make_notebook.py  pyproject.toml  qlora_complaint_intent_classifier.ipynb
qlora-complaint-intent-classifier/qlora-banking77-adapter/: README.md
qlora-complaint-intent-classifier/qlora-banking77-adapter/checkpoint-1252/: rng_state.pth  scheduler.pt  trainer_state.json
qlora-complaint-intent-classifier/qlora-banking77-adapter/checkpoint-1878/: rng_state.pth  scheduler.pt  trainer_state.json
qlora-complaint-intent-classifier/qlora-banking77-adapter/checkpoint-626/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
