[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lora-qlora-finetuning-lab"
version = "0.1.0"
description = "Notebook-first LoRA vs QLoRA fine-tuning project with real training runs"
readme = "README.md"
requires-python = ">=3.12.10,<3.13"
authors = [{ name = "Ahmad Mujtaba" }]
license = "MIT"
dependencies = [
    "accelerate>=1.14.0",
    "bitsandbytes>=0.49.2",
    "datasets>=5.0.0",
    "evaluate>=0.4.6",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "plotly>=6.8.0",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "transformers>=5.11.0",
    "typer>=0.26.7",
]

[project.scripts]
lora-qlora-lab = "lora_qlora_lab.cli:app"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "nbclient>=0.11.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
